--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 data:
-  data_location: /root/wavs
+  data_location: /root/buckets/pratik-ddsp2-data/monophonic-4secchunks
   extension: "wav"
 
 preprocess:
