--- a/config.yaml
+++ b/config.yaml
@@ -21,5 +21,5 @@ model:
 train:
   scales: [4096, 2048, 1024, 512, 256, 128]
   overlap: .75
-  load_checkpoint: false
+  load_checkpoint: true
   eval_per_n_epochs: 200
